# uipath-agenthack-service-recovery

./: .env.example  .gitignore  AGENTS.md  PLAN.md  PROJECT_BRIEF.md  README.md  pyproject.toml  setup.py
fixtures/: eval_scenarios.json  external_evidence_CASE_BG_CONTRA.csv
scripts/: build_presentation_deck.py  run_demo.sh  run_llm_demo.sh  run_submission_check.sh  run_test_manager_manual_eval.sh
service_recovery_core/: __init__.py  agent_validator.py  audit_bundle.py  data_fabric_record.py  demo_proof.py  enums.py  evals.py  evidence_packet_view.py  external_evidence.py  fixtures.py  llm_interpreter.py  policy.py  proof_contract.py  proof_index.py  schemas.py  state_machine.py  submission_proof.py  test_manager_bridge.py  uipath_payload.py
tests/: test_agent_validator.py  test_audit_bundle.py  test_data_fabric_record.py  test_demo_proof.py  test_evidence_packet_view.py  test_external_evidence.py  test_llm_interpreter.py  test_policy_state_eval.py  test_proof_index.py  test_schemas.py  test_submission_proof.py  test_test_manager_bridge.py  test_uipath_payload.py
waves/: 00_WAVES_INDEX.md  01_platform_access_and_inventory.md  02_maestro_case_state_spike.md  03_policy_version_pinning_spike.md  04_human_evidence_packet_spike.md  05_agent_override_visibility_spike.md  06_case_routing_visibility_spike.md  07_tech_stack_selection.md  07_uipath_grounded_build_plan.md  08_repo_foundation.md  09_domain_fixtures.md  10_evidence_schema.md  11_agent_schema_validator.md  12_policy_reconciliation_core.md  13_closure_policy.md  14_case_state_machine.md  19_human_review_flow.md  (+27 more)
(+146 files in other folders)
