[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uipath-agenthack-service-recovery"
version = "0.1.0"
description = "Local provisional core for governed telecom service recovery."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["service_recovery_core*"]
